# HoKo

./: .gitignore  CMakeLists.txt  Controleur.cpp  Controleur.h  README.md  build.sh  installerQtEtOpenCV.txt  main.cpp  run.sh
Image/: GestionImage.cpp  GestionImage.h
Interface/: InterfacePrincipale.cpp  InterfacePrincipale.h  InterfacePrincipale.ui
Interface/Fenetres/: FenetreModifier.cpp  FenetreModifier.h  FenetreModifier.ui  ui_FenetreModifier.h
Traitement/: Contours.cpp  FiltreCanny.cpp  FlouGaussien.cpp  FlouGaussien.h  GestionTraitement.cpp  GestionTraitement.h  Masque.cpp  SegmentationTSV.cpp  Traitement.cpp  Traitement.h
